# HoaLibrary-Max

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DoctorMax  Info.plist  MaxHoaLibrary.xcconfig  MaxHoaLibraryPacked.xcconfig  README.md  appveyor.yml  changelog.txt  hoa.library.cpp  hoa.library.sln  hoa.max.cpp  hoa.max.h  hoa.max.math.h  hoa.max_commonsyms.h  hoa_win_max_props_common.props  package-info.json.in
Max2D/: ChannelManager.cpp  ChannelManager.h  Hoa2D.max.h  hoa.2d.decoder_tilde.cpp  hoa.2d.encoder_tilde.cpp  hoa.2d.exchanger_tilde.cpp  hoa.2d.map_tilde.cpp  hoa.2d.meter_gui_tilde.cpp  hoa.2d.optim_tilde.cpp  hoa.2d.projector_tilde.cpp  hoa.2d.recomposer_gui.cpp  hoa.2d.recomposer_tilde.cpp  hoa.2d.rotate_tilde.cpp  hoa.2d.scope_gui_tilde.cpp  hoa.2d.space_gui.cpp  hoa.2d.vector_tilde.cpp  hoa.2d.wider_tilde.cpp
Max3D/: Hoa3D.max.h  hoa.3d.decoder_tilde.cpp  hoa.3d.encoder_tilde.cpp  hoa.3d.exchanger_tilde.cpp  hoa.3d.map_tilde.cpp  hoa.3d.meter_gui_tilde.cpp  hoa.3d.optim_tilde.cpp  hoa.3d.scope_gui_tilde.cpp  hoa.3d.vector_tilde.cpp  hoa.3d.wider_tilde.cpp
MaxCommon/: FFTConvolver.cpp  HoaCommon.max.h  Utilities.cpp  c.convolve_tilde.cpp  c.freeverb_tilde.cpp  hoa.connect.cpp  hoa.dac_tilde.c  hoa.gain_gui_tilde.cpp  hoa.in.cpp  hoa.in_tilde.cpp  hoa.map_gui.cpp  hoa.out.cpp  hoa.out_tilde.cpp  hoa.pi.cpp  hoa.pi_tilde.cpp  hoa.play_tilde.cpp  hoa.process_tilde.cpp  hoa.record_tilde.cpp  hoa.thisprocess_tilde.cpp
VisualStudioProjects/: c.convolve~.vcxproj  c.freeverb~.vcxproj  hoa.2d.decoder~.vcxproj  (+35 more)
source/projects/hoa.pi/: CMakeLists.txt  hoa.pi.cpp
(+372 files in other folders)
